# legal-assitant

./: .gitignore  LICENSE  README.md
backend/: .env.example  Dockerfile  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt
backend/evals/: eval_extraction.py  eval_llm_judge.py  golden_cases.json
backend/scripts/: audit_rag_steps.py
backend/src/: cli.py  main.py
backend/src/agents/: drafting.py  extraction.py  format_markdown.py  orchestrator.py  qa.py  strategy.py
backend/src/agents/prompts/: README.md  __init__.py  drafting.py  extraction.py  qa.py  strategy.py
backend/src/api/: dependencies.py  routes_analyze.py  routes_auth.py  routes_cases.py
backend/src/core/: config.py  logging.py  openai_client.py  security.py
backend/src/database/: models.py  session.py
backend/src/rag/: ingestion.py  pinecone_store.py  query_expansion.py  reranker.py  retriever.py  vector_store.py
backend/src/schemas/: ai_schemas.py  api_schemas.py
backend/src/serializers/: __init__.py  cases.py
backend/src/services/: case_file_text.py
backend/tests/: conftest.py  test_analyze.py  test_config.py  test_health.py  test_history.py  test_me.py  test_rag.py  test_retrieval_improvements.py  test_schemas.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  OPERATIONS.md  PROJECT_WALKTHROUGH.md  RAG.md  README.md  SECURITY.md  backend.md  rag_enrichments_evals_guide.md  rag_integration_guide.md
frontend/: .env.example  Dockerfile  README.md  deploy.sh  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
(+68 files in other folders)
